Update building names

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -207,9 +207,9 @@ en:
       works_sunday: "S"
     building_names:
       whitehall_55: "55 Whitehall"
-      whitehall_3: "Whitehall Place"
-      victoria_1: "Victoria Street"
-      horse_guards: "Horse Guards Rd"
+      whitehall_3: "3 Whitehall Place"
+      victoria_1: "1 Victoria Street"
+      horse_guards: "1 Horse Guards Rd"
       king_charles: "King Charles Street"
     key_skill_names:
       accounting: Accounting
