Fix typo on key skills list

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -255,7 +255,7 @@ en:
       graphic_design: Graphic design
       ux_design: UX design
       marketing: Marketing
-      contract_management: Contract managment
+      contract_management: Contract management
       project_management: Project management
       asset_management: Asset management
       tax: Tax
