--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -213,6 +213,8 @@ en:
       king_charles: "King Charles Street"
     key_skill_names:
       asset_management: Asset management
+      assurance: Assurance
+      benefits_realisation: Benefits realisation
       change_management: Change management
       coaching: Coaching
       commercial_specialist: Commercial specialist
@@ -231,6 +233,7 @@ en:
       interviewing: Interviewing
       it: IT
       law: Law
+      lean: Lean/ Six sigma
       line_management: Line management
       media_trained: Media trained
       mentoring: Mentoring
@@ -245,7 +248,9 @@ en:
       research_statistical: Research - statistical
       research_social: Research - social
       research_user: Research - user
+      risk_management: Risk management
       security: Security
+      service_design: Service and prowess design
       skills_and_capability: Skills and capability management
       sponsorship: Sponsorship and partmentships
       stakeholder_management: Stakeholder management
@@ -256,6 +261,7 @@ en:
       tax: Tax
       training: Training
       underwriting: Underwriting
+      user_research: User research
       valution: Valuation
       working_with_devolved_admin: Working with Devolved Administrations
       working_with_ministers: Working with Ministers
