--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -452,7 +452,7 @@ en:
 
   shared:
     search:
-      hint: 'Search name, job title, team name or location'
+      hint: 'Search people, teams and skills'
     cookie_message_html:
       People Finder uses cookies to make the site simpler.
       <a href="/cookies">Find out more about cookies</a>
