--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -528,6 +528,9 @@ en:
 
       photo_upload_hint: "Add or replace an image (no files over 6MB.)"
       photo_crop_hint: "Move and resize the box to crop your profile image."
+      privacy_notice: |
+        <p>All the information on your profile will be visible to DIT staff and contractors on the People Finder and other internal DIT tools.</p>
+        <p>Occasionally, we may use data from the People Finder in aggregate for departmental insights.</p>
       profile_deletable: "Note that deleting a profile cannot be undone."
       reported_profile_additional_details_label: "Additional details (optional)"
       request_information: "Incorrect or missing information? Has this person left the department or is this a duplicate?"
