Added ‘Independent panel member’ for form options

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -328,6 +328,7 @@ en:
       overseas_staff_rep: Overseas staff rep
       digital_champion: Digital champion
       information_manager: Information manager
+      independent_panel_member: Independent panel member
     profession_names:
       corp_finance: Corporate finance profession
       counter_fraud: Counter-fraud standards and profession
