CT-4200 Remove report a problem from logged out pages
Due to the spamming that has been received into Google Groups, it has been suggested that we remove the ‘Report a problem’ located in the footer from all the logged out pages.

In addition, so people still have a way to report login issues, the support email address has been added to the sign in / request link page.

The copy/placement can be discussed.

Note: as part of this work, I had some issues setting up ElasticSearch locally and making it work, so I tweaked the README instructions with what, in the end, helped me getting this up and running.

Also, when running the app/tests there were several deprecation warnings that I resolved (Pundit, Selenium...)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,9 @@ en:
       heading_other: Enter your MOJ email address
       log_in_google: Log in
       log_in_email: Request link
+      contact_support_html: |
+        Contact us at <a href="mailto:people-finder-support@digital.justice.gov.uk">people-finder-support@digital.justice.gov.uk</a>
+        if you experience a problem with People Finder.
     unsupported_browser:
       unsupported_browser_warning_html: |
         <h1 id='error-summary-heading' class='heading-medium error-summary-heading'>
