--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -401,6 +401,7 @@ en:
         secondary_email: Alternative work email address (optional)
         primary_phone_number: Main phone number (optional)
         secondary_phone_number: Alternative phone number (optional)
+        swap_email_display: Display alternative as main email (optional)
         pager_number: Pager number (optional)
         location_in_building: Location in building (optional)
         building: Building (optional)
@@ -468,6 +469,7 @@ en:
         current_project: List the names of current projects this person is working on. Use a comma to separate project names.
         working_days: Select all that apply
         description: Include details about where this person works on different days, any days out of the office, and if this person starts early or late.
+        secondary_email: If you want this email to be shown as your main email, select "Display alternative" option below
       membership:
         role: Role within this team
       group:
